--- a/New folder/login.html
+++ b/New folder/login.html
@@ -27,7 +27,7 @@
                     <a href="#">Forgot password</a>
                 </div>
 
-                <button type="submit" class="btn">login</button>
+                <button type="submit" class="btn"><a href="index.html">Login</a></button>
 
                 <div class="register-link">
                     <p>Don't have an account? <a href="#">
