fix: Project Structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <h1>HOME PAGE</h1>
 </head>
 <body>
-    <a href="login.html">Loghin</a>
+    <a href="pages/login.html">Loghin</a>
 </body>
 </html>
