--- a/pages/login.html
+++ b/pages/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<body>
+<body style="background: url(../assets/img/bg/bglogin.jpg) no-repeat;">
     <div class="wrapper">
         <form action="">
             <h1>Login</h1>
