--- a/pages/login.html
+++ b/pages/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<body style="background: url(../assets/img/bg/bglogin.jpg) no-repeat;">
+<body >
     <div class="wrapper">
         <form action="">
             <h1>Login</h1>
@@ -30,7 +30,7 @@
                 <button type="submit" class="btn"><a href="../index.html">Login</a></button>
 
                 <div class="register-link">
-                    <p>Don't have an account? <a href="#">
+                    <p>Don't have an account? <a href="../pages/register.html">
                     Register</a></p>
                 </div>
         </form>
