--- a/pages/login.html
+++ b/pages/login.html
@@ -27,7 +27,7 @@
                     <a href="#">Forgot password</a>
                 </div>
 
-                <button type="submit" class="btn"><a href="../index.html">Login</a></button>
+                <button type="submit" class="btn"><a href="../pages/dashboard.html">Login</a></button>
 
                 <div class="register-link">
                     <p>Don't have an account? <a href="../pages/register.html">
