UPDET LOGIN REGIS DASHBOARD DKK

--- a/pages/register.html
+++ b/pages/register.html
@@ -22,7 +22,7 @@
                 <input type="password" name="password" class="textfield">
             </form>
             <div class ="wrapper">
-                <button type="submit" class="btn"><a href="../pages/login.html">Submit</a></button>
+                <button type="submit" class="btn"><a href="../index.html">Submit</a></button>
             </div>
         </div>
     </section>
