--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <a href="#">Forgot password</a>
                 </div>
 
-                <button type="submit" class="btn"><a href="../pages/main.html">Login</a></button>
+                <button type="submit" class="btn"><a href="../WEB_UTS/pages/main.html">Login</a></button>
 
                 <div class="register-link">
-                    <p>Don't have an account? <a href="../pages/register.html">
+                    <p>Don't have an account? <a href="../WEB_UTS/pages/register.html">
                     Register</a></p>
                 </div>
         </form>
