--- a/pages/main.html
+++ b/pages/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Responsive Website</title>
+    <title>Halaman Utama</title>
     <link rel="stylesheet" type="text/css" href="../styles/main.css">
 </head>
 <body>
@@ -25,12 +25,12 @@
             <a class="sidebar-toggle" onclick="toggleSidebar()">Surat</a>
             <div class="sidebar-content" id="sidebarContent">
                 <a href="../pages/page2.html">Jenis Surat</a>
-                <a href="../pages/page2.html">Action</a>
+                <a href="../pages/page2.html">Status Surat</a>
             </div>
         </div>
     
         <div class="content">
-            <h2>Main Content Area</h2>
+            <h2 style="font-weight: 900;">Halaman Utama</h2>
             <div class="card">
                 <img src="https://via.placeholder.com/150" alt="Card Image">
                 <div class="card-content">
