--- a/pages/main.html
+++ b/pages/main.html
@@ -25,7 +25,7 @@
             <a class="sidebar-toggle" onclick="toggleSidebar()">Surat</a>
             <div class="sidebar-content" id="sidebarContent">
                 <a href="../pages/page2.html">Jenis Surat</a>
-                <a href="../pages/page2.html">Status Surat</a>
+                <a href="../pages/status.html">Status Surat</a>
             </div>
         </div>
     
