--- a/pages/status.html
+++ b/pages/status.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <section class="dash-main">
-    <h1>Irashaimase</h1>
+    <h1>Status Surat</h1>
         <table>
             <thead>
                 <tr>
