--- a/pages/status.html
+++ b/pages/status.html
@@ -32,11 +32,17 @@
                 <tr>
                     <th>NO</th>
                     <th>Jenis Surat</th>
-                    <th>Posisi Surat</th>
+                    <th>Status Surat</th>
                     <th>Aksi</th>
                 </tr>
             </thead>
             <tbody>
+                    <td>1</td>
+                    <td>Surat Aktif Kuliah</td>
+                    <td>Pending</td>
+                    <td ><div class ="wrapper">
+                        <button type="submit" class="btn"><a href="../index.html">Submit</a></button>
+                    </div></td>
             </tbody>
         </table>
     </section>
