--- a/pages/status.html
+++ b/pages/status.html
@@ -40,9 +40,9 @@
                     <td>1</td>
                     <td>Surat Aktif Kuliah</td>
                     <td>Pending</td>
-                    <td ><div class ="wrapper">
-                        <button type="submit" class="btn"><a href="../index.html">Submit</a></button>
-                    </div></td>
+                    <td >
+                        <div class="wrappers"><button type="submit" class="btn1"><a href="../index.html">Submit</a></button></div>
+                   </td>
             </tbody>
         </table>
     </section>
