--- a/pages/status.html
+++ b/pages/status.html
@@ -37,12 +37,30 @@
                 </tr>
             </thead>
             <tbody>
+                <tr>
                     <td>1</td>
                     <td>Surat Aktif Kuliah</td>
                     <td>Pending</td>
-                    <td >
-                        <div class="wrappers"><button type="submit" class="btn1"><a href="../index.html">Submit</a></button></div>
-                   </td>
+                    <td class="action">
+                        <a href=#><button name="detail" class="detail-btn">Detail</button></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Surat Aktif Kuliah</td>
+                    <td>Pending</td>
+                    <td class="action">
+                        <a href=#><button name="detail" class="detail-btn">Detail</button></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Surat Aktif Kuliah</td>
+                    <td>Pending</td>
+                    <td class="action">
+                        <a href=#><button name="detail" class="detail-btn">Detail</button></a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </section>
